# tikzplotly

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pylintrc  pyproject.toml  requirements.txt  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  documentation.yml
develop/contributing/: index.html
develop/tests/: index.html
doc/: NB.md
docs/css/: extra.css
docs/develop/: contributing.md  tests.md
docs/plot/: NB.md  features.md  supported.md  usage.md
plot/NB/: index.html
plot/features/: index.html
plot/supported/: index.html
plot/usage/: index.html
search/: search_index.json
src/tests/: README.md  test_bars.py  test_heatmaps.py  test_histograms.py  test_line_charts.py  test_markers.py  test_polar.py  test_scatter3d.py
src/tikzplotly/: __about__.py  __init__.py  _annotations.py  _axis.py  _bar.py  _color.py  _dash.py  _data.py  _dataContainer.py  _heatmap.py  _histogram.py  _marker.py  _polar.py  _save.py  _scatter.py  _scatter3d.py  _tex.py  _util.py  _utils.py
tests/: README.md  draw.tex  empty_plot.tex  helpers.py  test_area_plots.py  test_bars.py  test_heatmap.py  test_histograms.py  test_line_charts.py  test_markers.py  test_polar.py  test_scatter.py  test_scatter3d.py  test_specific.py  test_tikzplotly.py
tests/test_bars/: test_bars_horizontal1_reference.tex  test_bars_horizontal2_reference.tex  test_bars_vertical1_reference.tex  test_bars_vertical2_reference.tex
tests/test_heatmap/: test_heatmap_1_reference.tex  test_heatmap_2_reference.tex  test_heatmap_3_reference.tex  (+2 more)
(+49 files in other folders)
